# coding_agent_session_search

./: .gitignore  .skill-loop-progress.md  .ubsignore  AGENTS.md  CASS_INDEXING_HISTORICAL_BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PR_DESCRIPTION.md  README.md  build.rs  deny.toml  install.ps1  install.sh
.beads/: beads.left.meta.json  issues.jsonl  last-touched
.servitor/: dream-digest.md  dream-journal.md  journal.md  soul.md  state.json
benches/: index_perf.rs  integration_regression.rs  search_perf.rs
docs/: PERFORMANCE.md  ROBOT_MODE.md  SUBSYSTEM_COVERAGE_MATRIX.md  ftui_visual_parity_rubric.md
fuzz/: Cargo.toml
mcp_server/: Dockerfile  Dockerfile.light  README.md  docker-compose.yml  mcp_server.py  pyproject.toml  test_server.py
scripts/: coverage-uncovered.sh  coverage.sh  test-quick.sh  test-report.sh  validate-e2e-jsonl.sh  validate_ci.sh  validate_docs.sh
src/: bakeoff.rs  bookmarks.rs  crash_replay.rs  dependency_drift.rs  doctor.rs  doctor_chokepoint.rs  doctor_runs.rs  doctor_undo.rs  encryption.rs  evidence_bundle.rs  explainability.rs  export.rs  fleet_doctor_schema.rs  fleet_platform_compat.rs  fleet_probe.rs  lib.rs  main.rs  perf_evidence.rs  raw_mirror.rs  recipes_robot_docs.rs  robot_budget_envelope.rs  root_cause_projection.rs  search_defaults.rs  subsystem_coverage_matrix.rs  swarm_status.rs  update_check.rs  workflow_analytics.rs
tests/: _probe_mot85.rs  agent_detection_completeness.rs  atomic_swap_publish_crash_window.rs  card_defaults_wallclock_ab.rs  ci_workflow_validates_ubs_gate.rs  cli_diag.rs  cli_doctor.rs  (+130 more)
(+362 files in other folders)
